objects/maps__DataLayerSetting__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID used by Data Tool to upsert data for demo development purposes</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>maps__Settings__c</fullName>
        <label>Settings</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>navport-v1</fullName>
                </value>
                <value>
                    <fullName>dmp-v1</fullName>
                </value>
                <value>
                    <fullName>dbusa-v1</fullName>
                </value>
                <value>
                    <fullName>property</fullName>
                </value>
                <value>
                    <fullName>business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Maps Data Layer Setting</label>
    <listViews>
        <fullName>maps__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Data Layer Setting</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Data Layer Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>